# hyprland-monitor-attached

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  added.sh  example.sh
src/: main.rs
