[package]
name = "hyprland-monitor-attached"
description = "Listen monAdd event from the Hyprland wayland compositor"
version = "0.1.3"
edition = "2021"
exclude = ["target", "Cargo.lock"]
readme = "README.md"
repository = "https://github.com/coffebar/hyprland-monitor-attached"
keywords = ["cli", "wayland", "linux", "hyprland", "daemon"]
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
